@@ -11,10 +11,17 @@ nlevels(x)
   \item{x}{an object, usually a factor.} 
 }
 \details{
-  If the argument is not a \code{\link{factor}}, \code{NA} is returned.
-
+  This is usually applied to a factor, but other objects can have levels.
+  
   The actual factor levels (if they exist) can be obtained
   with the \code{\link{levels}} function.
+}
+\value{
+  The length of \code{\link{levels}(x)}, which is zero if
+  \code{x} has no levels.
+}
+\seealso{
+  \code{\link{levels}}, \code{\link{factor}}.
 }
 \examples{
 nlevels(gl(3,7)) # = 3
